syntax = "proto3";

option go_package = "pb";

service BookBackend {
    rpc AddBook (AddBookRequest) returns (AddBookResponse);
    rpc GetBook (GetBookRequest) returns (GetBookResponse);
    rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
}

message AddBookRequest {
    string url = 1;
}

message AddBookResponse {
    int64 id = 1;
}

message GetBookRequest {
    int64 id = 1;
}

message GetBookResponse {
    Book book = 1;
    BookStats stats = 2;
    repeated BookReview reviews = 3;

    repeated string job_status = 4;
}

message ListBooksRequest {

}

message ListBooksResponse {
    repeated Book books = 1;
}

message Book {
    int64 id = 1;
    string title = 2;
    string url = 3;
}

message BookStats {
    int64 number_of_words = 1;
    string longest_word = 2;
}

message BookReview {
    string username = 1;
    string review = 2;
}

message Job {
    map<string, string> metadata = 1;
    enum Type {
        DOWNLOAD = 0;
        CALCULATE_STATS = 1;
        GET_REVIEWS = 2;
    }
    Type type = 2;
    Book book = 3;
}
